--- a/media.css
+++ b/media.css
@@ -1,9 +1,9 @@
 @media (max-width: 1200px) {
-  .banner-right {
-    width: 400px;
+  .banner-right img{
+    right: 0;
   }
-  .banner-right img {
-    width: 430px;
+  .banner-right, .banner-right img {
+    width: 100%;
   }
   .banner-left {
     width: 450px;
@@ -17,7 +17,7 @@
     flex-direction: column;
   }
   .calendly1 {
-    display: none;
+    /* display: none; */
   }
   .calendy2 {
     display: block;
@@ -25,5 +25,19 @@
   .gradient-bg {
     height: auto;
     padding: 50px 0;
+  }
+}
+@media (max-width: 767px) {
+  .section-2 .div2 .d-flex{
+    flex-direction: column;
+  }
+}
+@media (max-width: 530px) {
+  .section-2 .div1 .d-flex{
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-2 .div1 .d-flex div{
+    width: 200px;
   }
 }
